--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,17 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "loguru>=0.7.3",
+    "numpy>=2.2.5",
+    "pandas>=2.2.3",
+    "pyarrow>=19.0.1",
     "safetensors>=0.5.3",
     "tokenizers>=0.21.1",
     "torch>=2.6.0",
 ]
+
+# [build-system]
+# requires = ["hatchling"]
+# build-backend = "hatchling.build"
+
+# [tool.hatch.build.targets.wheel]
+# packages = ["tokenizer", "tasks", "fine_tuning", "utils"]
